ajusta estilos do componente Header para simplificar regras de mídia

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -50,7 +50,7 @@
 }
 
 /* iPads, Tablets */
-@media screen and (min-width: 481px) and (max-width: 880px) {
+@media screen and (max-width: 880px) {
 	.container {
 		height: 100vh;
 		flex-direction: column;
@@ -71,10 +71,7 @@
 /* Mobile */
 @media screen and (max-width: 480px) {
 	.container {
-		height: 100vh;
-		flex-direction: column;
 		padding: 1rem;
-		justify-content: space-around;
 	}
 
 	.logo {
