--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,53 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--pink: #f09cbf;
+	--blue: #38b6ff;
+	--background-pink: #ffcbe1;
+	--background-blue: #d2e7fd;
+	--text-white: #ffffff;
+	--text-black: #000000;
+	--text-blue: #38b6ff;
+	--text-pink: #ff2e85;
 }
 
-@media (prefers-color-scheme: dark) {
+/* :root {
+  --background: #ffffff;
+  --foreground: #171717;
+} */
+
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --pink: #f09cbf;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} 
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
