ajusta estilos do componente Header e Think, alterando cores e layout dos botões

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -33,21 +33,23 @@
 
 .welcomeSubtext {
 	font-size: 1.8rem;
-	color: var(--text-black);
+	color: var(--text-white);
 	font-family: 'Dosis', serif;
 	text-align: center;
 	width: 45vw;
 }
 
 .wannaPlayBtn {
-	background-color: var(--text-blue);
+	background-color: var(--text-white);
 	color: var(--background-blue);
 	font-size: 2rem;
+	font-weight: 600;
 	padding: 0.5rem 1rem;
 	border: none;
-	border-radius: 5px;
+	border-radius: 32px;
 	cursor: pointer;
 	transition: all 0.3s;
+	display: none;
 }
 
 /* iPads, Tablets */
@@ -67,6 +69,11 @@
 	.welcomeSubtext {
 		font-size: 1.7rem;
 		width: 60vw;
+	}
+
+	.wannaPlayBtn {
+		display: inline-block;
+		margin-bottom: 32px;
 	}
 }
 
