--- a/src/components/Think/Think.module.css
+++ b/src/components/Think/Think.module.css
@@ -14,33 +14,6 @@
 	padding: 2rem;
 }
 
-.titleContainer {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 1rem;
-}
-
-.title {
-	width: 80%;
-	max-width: 500px;
-	font-size: 3rem;
-	font-weight: 700;
-	color: var(--text-white);
-	text-align: center;
-	font-family: 'Anton', sans-serif;
-	font-weight: 400;
-	line-height: 1.2;
-}
-
-.line {
-	width: 50%;
-	height: 0.2rem;
-	background-color: var(--text-white);
-}
-
 .subtext {
 	width: 80%;
 	max-width: 500px;
@@ -48,25 +21,9 @@
 	font-weight: 400;
 	color: var(--text-white);
 	text-align: center;
-	font-family: 'Dosis', sans-serif;
+	font-family: var(--font-text);
 	font-weight: 400;
 	line-height: 1.2;
-}
-
-.button {
-	background-color: var(--background-blue);
-	color: var(--text-white);
-	font-size: 2rem;
-	font-weight: 600;
-	padding: 0.5rem 1rem;
-	border: none;
-	border-radius: 32px;
-	cursor: pointer;
-	transition: all 0.3s;
-}
-
-.button:hover {
-	background-color: var(--hover-blue);
 }
 
 .image {
@@ -92,7 +49,7 @@
 
   .image {
     width: 100%;
-    height: 40%;
+    height: 30%;
     object-fit: cover;
   }
 }
@@ -104,6 +61,6 @@
   }
 
   .subtext {
-    font-size: 1rem;
+    font-size: 1.125rem;
   }
 }
