--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -7,17 +7,18 @@
 }
 
 .imageContainer {
-	width: 100px;
-	height: 100px;
+	width: 130px;
+	height: 130px;
 	overflow: hidden;
 	border-radius: 50%;
 	background-color: var(--text-white);
 	margin-bottom: 1rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .image {
-	width: 100%;
-	height: 100%;
 	object-fit: cover;
 }
 
